packages/yew-macro/tests/html_macro/list-fail.stderr
error: this opening fragment has no corresponding closing fragment
 --> $DIR/list-fail.rs:5:13
  |
5 |     html! { <> };
  |             ^^

error: this opening fragment has no corresponding closing fragment
 --> $DIR/list-fail.rs:6:15
  |
6 |     html! { <><> };
  |               ^^

error: this opening fragment has no corresponding closing fragment
 --> $DIR/list-fail.rs:7:13
  |
7 |     html! { <><></> };
  |             ^^

error: this closing fragment has no corresponding opening fragment
  --> $DIR/list-fail.rs:10:13
   |
10 |     html! { </> };
   |             ^^^

error: this closing fragment has no corresponding opening fragment
  --> $DIR/list-fail.rs:11:13
   |
11 |     html! { </></> };
   |             ^^^

error: only one root html element is allowed (hint: you can wrap multiple html elements in a fragment `<></>`)
  --> $DIR/list-fail.rs:14:18
   |
14 |     html! { <></><></> };
   |                  ^^^^^

error: expected a valid html element
  --> $DIR/list-fail.rs:16:15
   |
16 |     html! { <>invalid</> };
   |               ^^^^^^^

error: expected an expression following this equals sign
  --> $DIR/list-fail.rs:18:17
   |
18 |     html! { <key=></> };
   |                 ^^

error: the property value must be either a literal or enclosed in braces. Consider adding braces around your expression like this: { "key" . to_string() }
  --> $DIR/list-fail.rs:20:18
   |
20 |     html! { <key="key".to_string()></key> };
   |                  ^^^^^^^^^^^^^^^^^

error: only a single `key` prop is allowed on a fragment
  --> $DIR/list-fail.rs:23:30
   |
23 |     html! { <key="first key" key="second key" /> };
   |                              ^^^

error: fragments only accept the `key` prop
  --> $DIR/list-fail.rs:25:14
   |
25 |     html! { <some_attr="test"></> };
   |              ^^^^^^^^^
